bugfix different country name from different sources

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Tan Shin Jie - Aegis Technologies Assessment</title>
+  <title>COVID-19 Dashboard</title>
 </head>
 
 <body>
